--- a/public/package.json
+++ b/public/package.json
@@ -11,10 +11,10 @@
     "emoji-picker-react": "^4.7.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^10.0.4",
     "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
