--- a/public/package.json
+++ b/public/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.5",
+    "axios": "^1.6.8",
     "buffer": "^6.0.3",
+    "cloudinary": "^2.0.3",
+    "cloudinary-core": "^2.13.0",
     "emoji-picker-react": "^4.7.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
